; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_odb.c_odb_hardcoded_type.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_odb.c_odb_hardcoded_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32 }

@odb_hardcoded_type.empty_tree = internal global %struct.TYPE_7__ { %struct.TYPE_6__ { i32 75, i32 130, i32 93, i32 198, i32 66, i32 203, i32 110, i32 185, i32 160, i32 96, i32 229, i32 75, i32 248, i32 214, i32 146, i32 136, i32 251, i32 238, i32 73, i32 4 } }, align 4
@GIT_OBJECT_TREE = common dso_local global i32 0, align 4
@GIT_OBJECT_INVALID = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_7__*)* @odb_hardcoded_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @odb_hardcoded_type(%struct.TYPE_7__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_7__*, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %3, align 8
  %4 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %5 = call i32 @git_oid_cmp(%struct.TYPE_7__* %4, %struct.TYPE_7__* @odb_hardcoded_type.empty_tree)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %9, label %7

7:                                                ; preds = %1
  %8 = load i32, i32* @GIT_OBJECT_TREE, align 4
  store i32 %8, i32* %2, align 4
  br label %11

9:                                                ; preds = %1
  %10 = load i32, i32* @GIT_OBJECT_INVALID, align 4
  store i32 %10, i32* %2, align 4
  br label %11

11:                                               ; preds = %9, %7
  %12 = load i32, i32* %2, align 4
  ret i32 %12
}

declare dso_local i32 @git_oid_cmp(%struct.TYPE_7__*, %struct.TYPE_7__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
